kubernetes-flux/mini/storage-system/local-path-provisioner/app/ciliumnetworkpolicy.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/cilium.io/ciliumnetworkpolicy_v2.json

apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: local-path-provisioner
  namespace: storage-system
spec:
  endpointSelector:
    matchLabels:
      app: local-path-provisioner
  ingress:
    - {}
  egress:
    - toEntities:
        - kube-apiserver
